{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 64,
  "lineage": "e850bc16-e5f2-105c-7f39-9036ac12a7d2",
  "resources": [
    {
      "module": "module.backend-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "module.backend-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:979686420613:instance/i-01eafdd02cd8eec4f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01eafdd02cd8eec4f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-002917e4509a6a280"
              }
            ],
            "primary_network_interface_id": "eni-002917e4509a6a280",
            "private_dns": "ip-10-0-1-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-54-81-177-192.compute-1.amazonaws.com",
            "public_ip": "54.81.177.192",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0468de5d83e4e70e1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05debb4760a6b9267",
            "tags": {
              "Name": "backend-public"
            },
            "tags_all": {
              "Name": "backend-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de75a80e16374b48"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "i-01eafdd02cd8eec4f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_host",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/backend-alb/ba202ae7cbd2cb32",
            "arn_suffix": "app/backend-alb/ba202ae7cbd2cb32",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-850440965.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/backend-alb/ba202ae7cbd2cb32",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e3c9b8c025ea2f7e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05debb4760a6b9267"
              },
              {
                "subnet_id": "subnet-0b6bde0d6f751a0fa"
              }
            ],
            "subnets": [
              "subnet-05debb4760a6b9267",
              "subnet-0b6bde0d6f751a0fa"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Name": "backend-alb"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/backend-alb/ba202ae7cbd2cb32"
          },
          "dependencies": [
            "module.backend_alb.aws_lb_target_group.back_end",
            "module.vpc.aws_security_group.alb_backend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:listener/app/backend-alb/ba202ae7cbd2cb32/bcbf63a2f12728b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:targetgroup/backend-tg/8400b0d683da9113",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979686420613:listener/app/backend-alb/ba202ae7cbd2cb32/bcbf63a2f12728b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/backend-alb/ba202ae7cbd2cb32",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:listener/app/backend-alb/ba202ae7cbd2cb32/bcbf63a2f12728b6"
          },
          "dependencies": [
            "module.backend_alb.aws_lb.back_end",
            "module.backend_alb.aws_lb_target_group.back_end",
            "module.vpc.aws_security_group.alb_backend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:targetgroup/backend-tg/8400b0d683da9113",
            "arn_suffix": "targetgroup/backend-tg/8400b0d683da9113",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979686420613:targetgroup/backend-tg/8400b0d683da9113",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/backend-alb/ba202ae7cbd2cb32"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:targetgroup/backend-tg/8400b0d683da9113"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionhost",
      "provider": "module.bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:979686420613:instance/i-07d64582898a1afad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d64582898a1afad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-059f0d04544afa302"
              }
            ],
            "primary_network_interface_id": "eni-059f0d04544afa302",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-54-162-179-134.compute-1.amazonaws.com",
            "public_ip": "54.162.179.134",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07aec75745fe6889b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05debb4760a6b9267",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de75a80e16374b48"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "i-07d64582898a1afad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_host",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "module.frontend-ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:979686420613:instance/i-035924fcf7ed73fc8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035924fcf7ed73fc8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a60666a2e729193b"
              }
            ],
            "primary_network_interface_id": "eni-0a60666a2e729193b",
            "private_dns": "ip-10-0-1-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-98-82-34-52.compute-1.amazonaws.com",
            "public_ip": "98.82.34.52",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d55abf5c5d6b6874",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05debb4760a6b9267",
            "tags": {
              "Name": "frontend-public"
            },
            "tags_all": {
              "Name": "frontend-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de75a80e16374b48"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "i-035924fcf7ed73fc8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_host",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/frontend-alb/1ff428546a812b1c",
            "arn_suffix": "app/frontend-alb/1ff428546a812b1c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-1374717337.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/frontend-alb/1ff428546a812b1c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0f59d7a0e15fb37f6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05debb4760a6b9267"
              },
              {
                "subnet_id": "subnet-0b6bde0d6f751a0fa"
              }
            ],
            "subnets": [
              "subnet-05debb4760a6b9267",
              "subnet-0b6bde0d6f751a0fa"
            ],
            "tags": {
              "Name": "frontend-alb"
            },
            "tags_all": {
              "Name": "frontend-alb"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/frontend-alb/1ff428546a812b1c"
          },
          "dependencies": [
            "module.frontend_alb.aws_lb_target_group.front_end",
            "module.vpc.aws_security_group.alb_frontend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_http",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:listener/app/frontend-alb/1ff428546a812b1c/93debaf0e96c0945",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:targetgroup/frontend-tg/4f3b1d4a176d7e08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979686420613:listener/app/frontend-alb/1ff428546a812b1c/93debaf0e96c0945",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/frontend-alb/1ff428546a812b1c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:listener/app/frontend-alb/1ff428546a812b1c/93debaf0e96c0945"
          },
          "dependencies": [
            "module.frontend_alb.aws_lb.front_end",
            "module.frontend_alb.aws_lb_target_group.front_end",
            "module.vpc.aws_security_group.alb_frontend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:targetgroup/frontend-tg/4f3b1d4a176d7e08",
            "arn_suffix": "targetgroup/frontend-tg/4f3b1d4a176d7e08",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979686420613:targetgroup/frontend-tg/4f3b1d4a176d7e08",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:979686420613:loadbalancer/app/frontend-alb/1ff428546a812b1c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979686420613:targetgroup/frontend-tg/4f3b1d4a176d7e08"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc89148cfb34a64d",
            "arn": "arn:aws:ec2:us-east-1:979686420613:elastic-ip/eipalloc-0dc89148cfb34a64d",
            "association_id": "eipassoc-027c3acbf09b6ed62",
            "domain": "vpc",
            "id": "eipalloc-0dc89148cfb34a64d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e6ddc5606b04db5",
            "private_dns": "ip-10-0-1-46.ec2.internal",
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-54-172-210-140.compute-1.amazonaws.com",
            "public_ip": "54.172.210.140",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:internet-gateway/igw-079679404e41c401a",
            "id": "igw-079679404e41c401a",
            "owner_id": "979686420613",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-igw"
            },
            "tags_all": {
              "Name": "prod-vpc-igw"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc89148cfb34a64d",
            "association_id": "eipassoc-027c3acbf09b6ed62",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fd017d025c8afea6",
            "network_interface_id": "eni-05e6ddc5606b04db5",
            "private_ip": "10.0.1.46",
            "public_ip": "54.172.210.140",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05debb4760a6b9267",
            "tags": {
              "Name": "prod-vpc-nat"
            },
            "tags_all": {
              "Name": "prod-vpc-nat"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:route-table/rtb-06f1d09059b4cbbdb",
            "id": "rtb-06f1d09059b4cbbdb",
            "owner_id": "979686420613",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd017d025c8afea6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-private-rt"
            },
            "tags_all": {
              "Name": "prod-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "rtb-06f1d09059b4cbbdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:route-table/rtb-0c88dca9ff254d939",
            "id": "rtb-0c88dca9ff254d939",
            "owner_id": "979686420613",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079679404e41c401a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-vpc-public-rt"
            },
            "tags_all": {
              "Name": "prod-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "rtb-0c88dca9ff254d939",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b2dce8e4749333e",
            "region": "us-east-1",
            "route_table_id": "rtb-06f1d09059b4cbbdb",
            "subnet_id": "subnet-0d350f00f42ec3616"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "app-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bf01233f306b5c3",
            "region": "us-east-1",
            "route_table_id": "rtb-06f1d09059b4cbbdb",
            "subnet_id": "subnet-0cbe3f047014bc04a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "database-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02171babb78e9fc3e",
            "region": "us-east-1",
            "route_table_id": "rtb-06f1d09059b4cbbdb",
            "subnet_id": "subnet-018ef05c3c60c4054"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "database-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7c6419e487ae1d",
            "region": "us-east-1",
            "route_table_id": "rtb-06f1d09059b4cbbdb",
            "subnet_id": "subnet-07477256b66efff8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "web-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ffc7af76c05313d",
            "region": "us-east-1",
            "route_table_id": "rtb-06f1d09059b4cbbdb",
            "subnet_id": "subnet-03b29fd32973419fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "web-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01978a1e2ef8a1e0e",
            "region": "us-east-1",
            "route_table_id": "rtb-06f1d09059b4cbbdb",
            "subnet_id": "subnet-083a7e14bf09a179a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0178ae15a3526418c",
            "region": "us-east-1",
            "route_table_id": "rtb-0c88dca9ff254d939",
            "subnet_id": "subnet-05debb4760a6b9267"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0722d5a03e81061c8",
            "region": "us-east-1",
            "route_table_id": "rtb-0c88dca9ff254d939",
            "subnet_id": "subnet-0b6bde0d6f751a0fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_backend",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:security-group/sg-0e3c9b8c025ea2f7e",
            "description": "Allow HTTP/HTTPS for backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3c9b8c025ea2f7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-backend-sg",
            "name_prefix": "",
            "owner_id": "979686420613",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-backend-sg"
            },
            "tags_all": {
              "Name": "alb-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "sg-0e3c9b8c025ea2f7e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:security-group/sg-0f59d7a0e15fb37f6",
            "description": "Allow HTTP/HTTPS from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f59d7a0e15fb37f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "979686420613",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "sg-0f59d7a0e15fb37f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_server",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:security-group/sg-0673a1cee492629f8",
            "description": "Allow SSH + HTTP for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0673a1cee492629f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-server-sg",
            "name_prefix": "",
            "owner_id": "979686420613",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-server-sg"
            },
            "tags_all": {
              "Name": "backend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "sg-0673a1cee492629f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:security-group/sg-0de75a80e16374b48",
            "description": "Allow SSH from allowed CIDRs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de75a80e16374b48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion-host-sg",
            "name_prefix": "",
            "owner_id": "979686420613",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-sg"
            },
            "tags_all": {
              "Name": "bastion-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "sg-0de75a80e16374b48",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:security-group/sg-011a363f422b8f267",
            "description": "Allow MySQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011a363f422b8f267",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "979686420613",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "sg-011a363f422b8f267",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_server",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:security-group/sg-01e73a6101180a9ad",
            "description": "Allow SSH + HTTP for frontend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e73a6101180a9ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-server-sg",
            "name_prefix": "",
            "owner_id": "979686420613",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-server-sg"
            },
            "tags_all": {
              "Name": "frontend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "sg-01e73a6101180a9ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:subnet/subnet-03b29fd32973419fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b29fd32973419fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979686420613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-web-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-web-1"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "subnet-03b29fd32973419fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt4",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:subnet/subnet-083a7e14bf09a179a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083a7e14bf09a179a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979686420613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-web-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-web-2"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "subnet-083a7e14bf09a179a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt5",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:subnet/subnet-0d350f00f42ec3616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d350f00f42ec3616",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979686420613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-app-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-app-1"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "subnet-0d350f00f42ec3616",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt6",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:subnet/subnet-0cbe3f047014bc04a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbe3f047014bc04a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979686420613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-app-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-app-2"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "subnet-0cbe3f047014bc04a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt7",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:subnet/subnet-018ef05c3c60c4054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ef05c3c60c4054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979686420613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-db-1"
            },
            "tags_all": {
              "Name": "prod-vpc-private-db-1"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "subnet-018ef05c3c60c4054",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt8",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:subnet/subnet-07477256b66efff8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07477256b66efff8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979686420613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-private-db-2"
            },
            "tags_all": {
              "Name": "prod-vpc-private-db-2"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "subnet-07477256b66efff8d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:subnet/subnet-05debb4760a6b9267",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05debb4760a6b9267",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979686420613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "subnet-05debb4760a6b9267",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:subnet/subnet-0b6bde0d6f751a0fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6bde0d6f751a0fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "979686420613",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "prod-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0109bf7617d03cf0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "subnet-0b6bde0d6f751a0fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979686420613:vpc/vpc-0109bf7617d03cf0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0388d15555db712",
            "default_route_table_id": "rtb-092fa713ebd8379e6",
            "default_security_group_id": "sg-0b67a2046716bb784",
            "dhcp_options_id": "dopt-024bd5bf11a9802ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0109bf7617d03cf0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092fa713ebd8379e6",
            "owner_id": "979686420613",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979686420613",
            "id": "vpc-0109bf7617d03cf0b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}